--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,45 @@ span {
   display: none;
   height: 400px;
 }
+.video-section {
+  margin: 5% 0;
+
+  height: 600px;
+  position: relative;
+  
+}
+.video-p {
+  text-decoration: none;
+  color: white;
+}
+.video-text {
+  z-index: 3;
+  color: white;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%, -40%);
+}
+.video {
+  filter: brightness(0.7);
+}
+.video-p {
+  justify-content: center;
+}
+.video-p > a>* {
+  
+  cursor: pointer;
+ color: white;
+  margin: 10px;
+  padding: 10px;
+  border: 2px solid white;
+}
+.video {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
 .map-container {
   
   height: 300px;
@@ -261,6 +300,9 @@ input[type]:checked ~ span.middle {
 .service-cities-container:hover .city-img {
   border: 10px solid var(--red-main);
   
+}
+.city-img-active {
+  border: 10px solid var(--red-main) !important ;
 }
 .service-cities-container {
  
@@ -706,8 +748,9 @@ font-weight: 600;
  right: -20px;
 }
 .img-grid-1 {
+  margin-right: 10%;
   object-fit: contain;
- 
+  float: right;
   margin: auto;
   /* transform: translate(-80px); */
   width: 60%;
@@ -1050,6 +1093,9 @@ align-self: flex-end !important;
   display: flex;
   flex-direction: column;
   position: relative;
+}
+.first-mid a {
+  margin-right: 10%;
 }
 .second-mid {
 
