--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,12 @@
   --paragraph-small-wide-screen-nav : 1rem;
   --paragraph-very-small-wide-screen : 0.8rem;
 }
+
 .img-slider-auto {
   width: 100%;
+}
+.three-cols-service{
+  justify-content: center;
 }
 .extra-big {
   font-size: var(--h1-extra-big) !important;
@@ -71,6 +75,9 @@
 .black {
   filter: none;
 }
+.auto {
+  margin: auto;
+}
 .three-cols-service.row > .col:nth-child(3) {
   color: #000000;
   background-color: white;
@@ -86,8 +93,8 @@
   box-shadow: var(--shadow-box);
   margin: 20px;
   color: white;
-  width: 25vw;
-  height: 250px;
+  width: 23vw;
+  height: 280px;
   text-align: center;
   background-color: var(--red-main);
 }
@@ -367,6 +374,13 @@ span {
   display: none;
   position: absolute;
   margin: auto;
+}
+.logo-footer-div span{
+  filter: none;
+}
+.logo-footer-div {
+  
+  align-items: center;
 }
 .header {
   padding: 20px 0;
@@ -907,7 +921,7 @@ body{
 .title-bike {
   position: absolute;
   top: 0;
-  right: 20%;
+  right: 5%;
 }
 .products-dropdown-container, .bikes-dropdown-container {
   animation: dropFade 0.3s forwards;
@@ -1146,7 +1160,7 @@ font-weight: 600;
  
   align-items: center;
   cursor: pointer;
-  width: 90%;
+  width: 100%;
   
  
 
@@ -1458,12 +1472,25 @@ align-self: flex-end !important;
   display: flex;
   flex-direction: row;
 }
-.choose_section {
-  background-color: var(--bg-gray);
-  justify-content: space-between;
+.choose-section {
+  justify-content: space-evenly;
+  background-color: var(--red-main);
+  color: white;
+  height: 30vh;
 }
+.choose-section div {
+  opacity: 0;
+  margin: auto;
+  width: 25%;
+  text-align: center;
+}
+
 .paragraph-container {
   width: 50%;
+ 
+}
+.paragraph-container .row .right-choose-col {
+  background-color: white;
 }
 .mid_section-container {
  
@@ -1509,10 +1536,8 @@ align-self: flex-end !important;
 .first-mid a {
   margin-right: 10%;
 }
-.second-mid {
 
-  /* background-color: var(--red-main); */
-}
+
 .silent {
   font-size: var(--h1-fontsize);
   color: var(--red-main);
@@ -1990,8 +2015,8 @@ html {
 }
 
 .nav__title {
-  font-weight: 400;
-  font-size: 15px;
+  font-weight: 600;
+  font-size: var(--paragraph-wide-screen)
 }
 
 .footer address {
@@ -2029,14 +2054,38 @@ html {
 
 .footer__nav {
   display: flex;
-  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+.nav__ul > li > span  {
+  font-size: 2rem !important;
+  filter: none;
+}
+.nav__ul li {
+  position: relative;
 }
 
 .footer__nav > * {
-  flex: 1 50%;
+  
+  width: 33%;
+ 
   margin-right: 1.25em;
 }
+.nav__ul {
+  text-align: left;
+}
+.nav__ul > .row {
+  justify-content: left;
+}
+.container-footer {
+  padding-left: 5%;
+  
+  display: flex;
+  flex-direction: column;
+ 
 
+
+ 
+}
 .nav__ul a {
   color: #ffffff;
 }
@@ -2140,10 +2189,7 @@ html {
 .socials-footer {
   gap: 10px;
    display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 100%;
-  margin: auto;
+ 
 }
 .text-icon-hire-row {
   align-items: center;
@@ -2166,33 +2212,15 @@ html {
   height: 200px;
 
 }
-@media screen and (min-width: 24.375em) {
-  .legal .legal__links {
-    margin-left: auto;
-  }
-}
 
-@media screen and (min-width: 40.375em) {
-  .footer__nav > * {
-    flex: 1;
-  }
-  
-  .nav__item--extra {
-    flex-grow: 2;
-  }
-  
-  .footer__addr {
-    flex: 1 0px;
-  }
-  
-  .footer__nav {
-    flex: 2 0px;
-  }
-}
 
 
 
 @media screen and (max-width: 1050px) {
+  .text-section-top {
+    text-align: center;
+    margin: auto;
+  }
   .message-contact-form {
     width: 80%;
    
@@ -2200,9 +2228,7 @@ html {
   .hire-bike-part-2 {
     width: 100%;
   }
-  .text-section-top {
-    padding-top: 4% !important;
-  }
+ 
   .text-section-top h1 {
     line-height: 3rem !important;
 
@@ -2382,10 +2408,7 @@ html {
   .paragraph-container {
     width: 100%;
   }
-  .choose_section {
-    flex-direction: column;
-  }
-  
+ 
   .mid-second-container {
     width: 100%;
   }
@@ -2484,6 +2507,15 @@ html {
   }
 }
 @media screen and (max-width: 850px) {
+  .nav__ul .row {
+    flex-direction: column;
+  } 
+  .footer__nav > * {
+    width: 100%;
+  }
+  .footer__nav {
+    flex-direction: column;
+  }
   .about-sec-main {
     flex-direction: column;
   }
@@ -2507,6 +2539,9 @@ html {
 }
 
 @media screen and (max-width: 705px) {
+  .three-cols-service .col {
+    height: auto;
+  }
   .top-contact img {
     width: 100%;
   }
@@ -2534,9 +2569,7 @@ html {
   .faq-section img {
     width: 90%;
   }
-  .text-section-top {
-    margin-left: 5%;
-  }
+  
   .text-top-flash {
     display: none;
   }
@@ -2651,9 +2684,7 @@ html {
   .logo-footer {
     width: 100%;
   }
-  .text-section-top {
-    padding-top: 60px;
-  }
+ 
 
   :root{
     --shadow-box: -3px 8px 15px 0px rgba(0,0,0,0.34);
@@ -2879,6 +2910,7 @@ html {
   }
 }
 @media screen and (min-width: 1050px) {
+
   .part-section-top-second {
     animation: subPagesAnimationImgMain 0.8s forwards;
   }
